# rjk-duck

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
benchmark/: CMakeLists.txt
benchmark/basic_dispatch/: benchmark.cpp  factories.cpp  factories.hpp
benchmark/lifetime/: benchmark.cpp
cmake/: rjk_duck-config.cmake.in
docs/concepts/: 01_traits.md
docs/ducks/: 01_overview.md  02_duck_ptr.md  02_trait_narrowing.md  03_trait_narrowing.md  04_duck_covariance.md  05_performance_tuning.md
docs/traits/: 01_overview.md  02_const_traits.md  03_operators.md  04_policies.md  05_like.md  06_composition.md  07_extension.md  08_lookup.md
include/: any.hpp  any_tags.hpp  duck.hpp  duck_tags.hpp  duck_view.hpp
include/detail/: bind_type_trait.hpp  display_error.hpp  duck_base.hpp  duck_behavior_base.hpp  duck_vtable_generator.hpp  fixed_string.hpp  flag_enum.hpp  fn_traits.hpp  meta_util.hpp  remove_fn_qualifiers.hpp  remove_noexcept.hpp  storage.hpp  substitute_fn_traits.hpp  subsumption_utils.hpp  vtable_fn_maker.hpp  vtable_generator.hpp
include/rjk/: duck.hpp
module/: duck.cppm
scripts/: generate_operators.py  single_header.cmd
src/: duck.hpp  duck_tags.hpp  duck_utils.hpp  duck_view.hpp
src/detail/: display_error.hpp  duck_base.hpp  duck_behavior_base.hpp  flag_enum.hpp  fn_traits.hpp  meta_util.hpp  overload_resolution.hpp  remove_fn_qualifiers.hpp  remove_noexcept.hpp  storage.hpp  subsumption_utils.hpp  vtable_caller.hpp  vtable_fn_maker.hpp  vtable_generator.hpp
tests/: CMakeLists.txt  test.cpp  test_access.cpp  test_constexpr.cpp  test_construction.cpp  test_copy_move.cpp  test_duck_view.cpp  test_fixtures.hpp  test_impl.cpp  test_lifetime.cpp  test_like.cpp  test_member_operators.cpp  test_multiple_traits.cpp  test_operators.cpp  test_overloads.cpp  test_return_deduction.cpp  test_scratch.cpp  test_stdlib.cpp  test_storage.cpp  test_subsumption.cpp  test_variadic_operators.cpp
